--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dotenv": "^6.2.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
+    "koa-cors": "^0.0.16",
     "koa-helmet": "^4.0.0",
-    "koa-route": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "swagger-koa": "^2.0.0"
